<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selecciona tus favoritos"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margen_superior"
            android:textSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="0.5">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/grupo_radios_asignaturas">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_uno"
                    android:id="@+id/radio_1_asignaturas"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_dos"
                    android:id="@+id/radio_2_asignaturas"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_tres"
                    android:id="@+id/radio_3_asignaturas"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_cuatro"
                    android:id="@+id/radio_4_asignaturas"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_cinco"
                    android:id="@+id/radio_5_asignaturas"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="0.5">
            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/grupo_radios_profesores"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_uno_profesores"
                    android:id="@+id/opcion_1_profesores"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_dos_profesores"
                    android:id="@+id/opcion_2_profesores"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_tres_profesores"
                    android:id="@+id/opcion_3_profesores"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_cuatro_profesores"
                    android:id="@+id/opcion_4_profesores"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.4">
        <EditText
            android:layout_width="300dp"
            android:id="@+id/etiqueta_nota1"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:id="@+id/etiqueta_nota2"
            android:layout_marginTop="@dimen/margen_superior"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margen_superior"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/boton_calcular"
            android:text="@string/boton_calcular"/>
    </LinearLayout>
</LinearLayout>